@@ -61,7 +61,7 @@ sal_Bool SAL_CALL SettingsEventHandler::callHandlerMethod(const uno::Reference<a
 	EventObject >>= eventS;
 	if (eventS == A2OU("ok")) {
 		saveOptionsFromWindowToRegistry(xWindow);
-		PropertyManager::get(compContext)->readVoikkoSettings();
+		PropertyManager::get(compContext)->reloadVoikkoSettings();
 		return sal_True;
 	}
 	if (eventS == A2OU("back") || eventS == A2OU("initialize")) {
