@@ -1,3 +1,7 @@
+2009-02-15 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Allow changing dictionary variant in settings.
+
 2009-02-14 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Turn PropertyManager into a proper singleton.
